lib/crates/fabro-llm/tests/it/wire/snapshots/it__wire__openai_compatible__stream_without_done_synthesizes_finish_when_content_started.snap
---
source: lib/crates/fabro-llm/tests/it/wire/openai_compatible.rs
expression: rendered
---
[
  {
    "type": "text_start",
    "text_id": null
  },
  {
    "type": "text_delta",
    "delta": "Hello",
    "text_id": null
  },
  {
    "type": "text_end",
    "text_id": null
  },
  {
    "type": "finish",
    "finish_reason": "stop",
    "usage": {
      "input_tokens": 0,
      "output_tokens": 0,
      "reasoning_tokens": 0,
      "cache_read_tokens": 0,
      "cache_write_tokens": 0
    },
    "response": {
      "id": "chatcmpl_stream",
      "model": "test-model",
      "provider": "openai-compatible",
      "message": {
        "role": "assistant",
        "content": [
          {
            "kind": "text",
            "data": "Hello"
          }
        ],
        "name": null,
        "tool_call_id": null
      },
      "finish_reason": "stop",
      "usage": {
        "input_tokens": 0,
        "output_tokens": 0,
        "reasoning_tokens": 0,
        "cache_read_tokens": 0,
        "cache_write_tokens": 0
      },
      "raw": null,
      "warnings": [],
      "rate_limit": null
    }
  }
]
